--- a/i_team.html
+++ b/i_team.html
@@ -73,10 +73,12 @@
           <ul>
             <li><a href="https://alyazeedbasyoni.wixsite.com/blog">Alyazeed
 
+
                 Basyoni</a> (8/2019-present)</li>
             <li>Slavomír Hanzely (8/2019-present)<br>
             </li>
             <li><a href="https://vcc.kaust.edu.sa/Pages/Gasanov.aspx">Elnur
+
 
 
 
@@ -128,13 +130,14 @@
 
 
 
+
                 Sailanbayev</a> (8/2017-12/2018)<br>
             </li>
           </ul>
           <h2> Research Interns<br>
           </h2>
           <ul>
-            <li><a href="https://github.com/rka97">Ahmed Khaled Ragab</a>
+            <li><a href="https://github.com/rka97">Ahmed Khaled</a>
               (Cairo University), 6/2019-present</li>
             <li><a href="https://github.com/Selim78">Sélim Chraibi</a>
               (Grenoble, Rhône-Alpes), 4/2019-present<br>
@@ -160,10 +163,12 @@
 
 
 
+
                 Sokolov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a
                 href="https://eduardgorbunov.github.io/index.html#header3-a">Eduard
+
 
 
 
@@ -209,10 +214,12 @@
 
 
 
+
                 Elsukov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a
                 href="https://www.researchgate.net/profile/Egor_Shulgin">Egor
+
 
 
 
@@ -254,10 +261,12 @@
 
 
 
+
                 Kovalev</a> (Moscow Institute of Physics and
               Technology), 1/2018-2/2018<br>
             </li>
             <li><a href="https://vcc.kaust.edu.sa/Pages/Gasanov.aspx">Elnur
+
 
 
 
@@ -304,10 +313,12 @@
 
 
 
+
                 Gorbunov</a> (Moscow Institute of Physics and
               Technology), 1/2018-2/2018</li>
             <li><a
                 href="https://www.imo-official.org/participant_r.aspx?id=26648">Slavomír
+
 
 
 
@@ -323,10 +334,15 @@
           <h2>Visitors<br>
           </h2>
           <ul>
+            <li><a
+href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xiuxian
+                Li</a> (Nanyang Technological University), 9/2019<br>
+            </li>
             <li><a href="http://www.ntu.edu.sg/home/xbresson/">Xavier
                 Bresson</a> (NTU Singapore), 4/2019<br>
             </li>
             <li><a href="https://www.hse.ru/en/org/persons/219293044">Alexey
+
 
 
 
@@ -344,6 +360,7 @@
                 Loizou</a> (Edinburgh), 4/2019-5/2019</li>
             <li><a
                 href="https://www.researchgate.net/profile/Dmitry_Kamzolov">Dmitry
+
 
 
 
@@ -375,11 +392,13 @@
 
 
 
+
                 Möllenhoff</a> (Munich), 8/2018<br>
             </li>
             <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
                 Loizou</a> (Edinburgh), 1/2018-3/2018</li>
             <li><a href="http://www.damtp.cam.ac.uk/user/me404/">Matthias
+
 
 
 
@@ -439,6 +458,7 @@
 
 
 
+
                 Doikov</a> (HSE Moscow), 10/2017-11/2017<br>
             </li>
             <li><a href="http://sstich.ch">Sebastian Stich</a> (EPFL),
@@ -454,6 +474,7 @@
                 Hanzely</a> (Edinburgh), 4/2017-5/2017</li>
             <li><a
 href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCHENKO">Dmitriy
+
 
 
 
@@ -527,6 +548,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
 
 
 
+
                 Ribeiro</a> (10/2014<span class="style1" style="width:
                 300px;">–</span>3/2015)</li>
             <li>current position: Associate Professor, Federal
@@ -561,6 +583,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
 
 
 
+
               <br>
             </li>
             <li>current position: Assistant Professor, University of
@@ -568,6 +591,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
           </ul>
           <ul>
             <li><a href="http://perso.telecom-paristech.fr/%7Eofercoq/">Olivier
+
 
 
 
@@ -627,6 +651,7 @@ href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Ra
 
 
 
+
                 Tappenden</a> (2/2012<span class="style1" style="width:
                 300px;">–</span>7/2014)</li>
             <li>current position: Assistant Professor, University of
@@ -636,6 +661,7 @@ href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Ra
           <ul>
             <li><a
 href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marecek">Jakub
+
 
 
 
@@ -703,6 +729,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Loizou</a> (10/2015<span class="style1" style="width:
                 300px;">–</span>6/2019)</li>
             <li>thesis: Randomized iterative methods for linear systems:
@@ -714,6 +741,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
           <ul>
             <li><a
                 href="http://www.inf.ed.ac.uk/people/students/Theo_Pavlakou.html">Theo
+
 
 
 
@@ -784,6 +812,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Csiba</a> (9/2014<span class="style1" style="width:
                 300px;">–present</span>)</li>
             <li>thesis: Data sampling strategies in stochastic
@@ -819,6 +848,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Bravi</a> (3/2015<span class="style1" style="width:
                 300px;">–</span>6/2015)</li>
             <li>visiting PhD student from University of Florence, Italy
@@ -828,6 +858,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
           <ul>
             <li><a
 href="https://scholar.google.com/citations?user=C3ujEF0AAAAJ&amp;hl=zh-CN">Minnan
+
 
 
 
@@ -891,9 +922,11 @@ href="https://scholar.google.com/citations?user=C3ujEF0AAAAJ&amp;hl=zh-CN">Minna
 
 
 
+
                 Pavlakou</a> (2015) - MSc dissertation</li>
             <li><a
 href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
+
 
 
 
@@ -926,11 +959,13 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
 
 
 
+
                 Labant</a> (2016), Data Scientist at Department of
               Education, United Kingdom<br>
             </li>
             <li><a
                 href="https://uk.linkedin.com/in/jakob-kisiala-5807001b">Jakob
+
 
 
 
@@ -977,9 +1012,11 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
 
 
 
+
                 China</a>&nbsp;</li>
             <li>Meensuk Punlavee (2013)&nbsp;</li>
             <li><a href="https://www.linkedin.com/in/abankswatson">Alexander
+
 
 
 
@@ -988,6 +1025,7 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
             </li>
             <li><a
                 href="http://scholar.google.com/citations?user=vMMDhTUAAAAJ&amp;hl=en">Christos
+
 
 
 
@@ -1029,6 +1067,7 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
 
 
 
+
                 Karanika</a> (2010), Modelling &amp; Analytics Manager
               at Royal Bank of Scotland</li>
             <li>Robie King (2010)&nbsp;</li>
@@ -1051,6 +1090,7 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
             </li>
             <li><a
 href="https://warwick.ac.uk/fac/sci/mathsys/people/students/2014intake/peneva/">Iliana
+
 
 
 
@@ -1079,8 +1119,10 @@ href="https://warwick.ac.uk/fac/sci/mathsys/people/students/2014intake/peneva/">
 
 
 
+
                 Filipecki</a> (2011, Edinburgh Mathematics), now: <a
                 href="https://de.linkedin.com/in/bartosz-filipecki-24923a85">postdoc
+
 
 
 
@@ -1090,6 +1132,7 @@ href="https://warwick.ac.uk/fac/sci/mathsys/people/students/2014intake/peneva/">
             </li>
             <li>Edward Cumberlege (2011, Edinburgh Mathematics), now: <a
 href="https://www.bloomberg.com/research/stocks/private/person.asp?personId=264554286&amp;privcapId=214118497&amp;previousCapId=214118497&amp;previousTitle=Sagamore%20Investments">Director
+
 
 
 
@@ -1105,6 +1148,7 @@ href="https://www.bloomberg.com/research/stocks/private/person.asp?personId=2645
             <li><a
                 href="http://esd.sutd.edu.sg/faculty/selin-damla-ahipasaoglu/">Selin
 D.
+
 
 
 
@@ -1158,8 +1202,10 @@ D.
 
 
 
+
                 Baes</a> (University of Zurich)</li>
             <li><a href="http://maiage.jouy.inra.fr/?q=fr/bergou">Elhoucine
+
 
 
 
@@ -1212,6 +1258,7 @@ D.
 
 
 
+
                 Eftekhari</a> (The Alan Turing Institute)</li>
             <li><a href="http://www.damtp.cam.ac.uk/people/me404/">Matthias
 
@@ -1239,8 +1286,10 @@ D.
 
 
 
+
                 Ehrhardt</a> (Cambridge)</li>
             <li><a href="http://www.iam.fmph.uniba.sk/ospm/Harman/">Radoslav
+
 
 
 
@@ -1298,8 +1347,10 @@ D.
 
 
 
+
                 Nesterov</a> (Louvain)</li>
             <li><a href="https://www.researchgate.net/profile/Tie_Ni">Tie
+
 
 
 
@@ -1328,6 +1379,7 @@ D.
                 Ni</a> (Liaoning Technical University)</li>
             <li><a
                 href="http://www-syscom.univ-mlv.fr/%7Epesquet/index.htm">Jean-Christophe
+
 
 
 
@@ -1384,9 +1436,11 @@ D.
 
 
 
+
                 Stich</a> (Louvain)</li>
             <li><a
 href="https://www.liverpool.ac.uk/mathematical-sciences/staff/tuomo-valkonen/">Tuomo
+
 
 
 
