--- a/i_team.html
+++ b/i_team.html
@@ -74,10 +74,13 @@
             <li><a href="https://alyazeedbasyoni.wixsite.com/blog">Alyazeed
 
 
+
                 Basyoni</a> (8/2019-present)</li>
-            <li>Slavomír Hanzely (8/2019-present)<br>
+            <li><a href="https://slavomirhanzely.wordpress.com">Slavomír
+                Hanzely</a> (8/2019-present)<br>
             </li>
             <li><a href="https://vcc.kaust.edu.sa/Pages/Gasanov.aspx">Elnur
+
 
 
 
@@ -105,6 +108,7 @@
               (8/2017-12/2018)</li>
             <li><a
                 href="https://vcc.kaust.edu.sa/Pages/Sailanbayev.aspx">Alibek
+
 
 
 
@@ -164,10 +168,12 @@
 
 
 
+
                 Sokolov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a
                 href="https://eduardgorbunov.github.io/index.html#header3-a">Eduard
+
 
 
 
@@ -215,10 +221,12 @@
 
 
 
+
                 Elsukov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a
                 href="https://www.researchgate.net/profile/Egor_Shulgin">Egor
+
 
 
 
@@ -262,10 +270,12 @@
 
 
 
+
                 Kovalev</a> (Moscow Institute of Physics and
               Technology), 1/2018-2/2018<br>
             </li>
             <li><a href="https://vcc.kaust.edu.sa/Pages/Gasanov.aspx">Elnur
+
 
 
 
@@ -314,6 +324,7 @@
 
 
 
+
                 Gorbunov</a> (Moscow Institute of Physics and
               Technology), 1/2018-2/2018</li>
             <li><a
@@ -324,11 +335,14 @@
 
 
 
+
                 Hanzely</a> (Comenius University), 1/2018-2/2018<br>
             </li>
             <li>Aashutosh Tiwari (IIT Kanpur), 5/2017-7/2017</li>
-            <li>Atal Sahu (IIT Kanpur), 5/2017-7/2017, now: <a
-                href="https://mcanini.github.io/">PhD student @ KAUST</a><br>
+            <li><a
+                href="https://sands.kaust.edu.sa/authors/atal-narayan-sahu/">Atal
+                Sahu</a> (IIT Kanpur), 5/2017-7/2017, now: PhD student @
+              KAUST<br>
             </li>
           </ul>
           <h2>Visitors<br>
@@ -336,6 +350,7 @@
           <ul>
             <li><a
 href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xiuxian
+
                 Li</a> (Nanyang Technological University), 9/2019<br>
             </li>
             <li><a href="http://www.ntu.edu.sg/home/xbresson/">Xavier
@@ -354,12 +369,14 @@ href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xi
 
 
 
+
                 Kroshnin</a> (Moscow &amp; Lyon), 4/2019<br>
             </li>
             <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
                 Loizou</a> (Edinburgh), 4/2019-5/2019</li>
             <li><a
                 href="https://www.researchgate.net/profile/Dmitry_Kamzolov">Dmitry
+
 
 
 
@@ -393,11 +410,13 @@ href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xi
 
 
 
+
                 Möllenhoff</a> (Munich), 8/2018<br>
             </li>
             <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
                 Loizou</a> (Edinburgh), 1/2018-3/2018</li>
             <li><a href="http://www.damtp.cam.ac.uk/user/me404/">Matthias
+
 
 
 
@@ -459,6 +478,7 @@ href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xi
 
 
 
+
                 Doikov</a> (HSE Moscow), 10/2017-11/2017<br>
             </li>
             <li><a href="http://sstich.ch">Sebastian Stich</a> (EPFL),
@@ -474,6 +494,7 @@ href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xi
                 Hanzely</a> (Edinburgh), 4/2017-5/2017</li>
             <li><a
 href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCHENKO">Dmitriy
+
 
 
 
@@ -549,6 +570,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
 
 
 
+
                 Ribeiro</a> (10/2014<span class="style1" style="width:
                 300px;">–</span>3/2015)</li>
             <li>current position: Associate Professor, Federal
@@ -584,6 +606,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
 
 
 
+
               <br>
             </li>
             <li>current position: Assistant Professor, University of
@@ -591,6 +614,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
           </ul>
           <ul>
             <li><a href="http://perso.telecom-paristech.fr/%7Eofercoq/">Olivier
+
 
 
 
@@ -652,6 +676,7 @@ href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Ra
 
 
 
+
                 Tappenden</a> (2/2012<span class="style1" style="width:
                 300px;">–</span>7/2014)</li>
             <li>current position: Assistant Professor, University of
@@ -661,6 +686,7 @@ href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Ra
           <ul>
             <li><a
 href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marecek">Jakub
+
 
 
 
@@ -730,6 +756,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Loizou</a> (10/2015<span class="style1" style="width:
                 300px;">–</span>6/2019)</li>
             <li>thesis: Randomized iterative methods for linear systems:
@@ -741,6 +768,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
           <ul>
             <li><a
                 href="http://www.inf.ed.ac.uk/people/students/Theo_Pavlakou.html">Theo
+
 
 
 
@@ -813,6 +841,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Csiba</a> (9/2014<span class="style1" style="width:
                 300px;">–present</span>)</li>
             <li>thesis: Data sampling strategies in stochastic
@@ -849,6 +878,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Bravi</a> (3/2015<span class="style1" style="width:
                 300px;">–</span>6/2015)</li>
             <li>visiting PhD student from University of Florence, Italy
@@ -858,6 +888,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
           <ul>
             <li><a
 href="https://scholar.google.com/citations?user=C3ujEF0AAAAJ&amp;hl=zh-CN">Minnan
+
 
 
 
@@ -923,9 +954,11 @@ href="https://scholar.google.com/citations?user=C3ujEF0AAAAJ&amp;hl=zh-CN">Minna
 
 
 
+
                 Pavlakou</a> (2015) - MSc dissertation</li>
             <li><a
 href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
+
 
 
 
@@ -960,11 +993,13 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
 
 
 
+
                 Labant</a> (2016), Data Scientist at Department of
               Education, United Kingdom<br>
             </li>
             <li><a
                 href="https://uk.linkedin.com/in/jakob-kisiala-5807001b">Jakob
+
 
 
 
@@ -1013,9 +1048,11 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
 
 
 
+
                 China</a>&nbsp;</li>
             <li>Meensuk Punlavee (2013)&nbsp;</li>
             <li><a href="https://www.linkedin.com/in/abankswatson">Alexander
+
 
 
 
@@ -1025,6 +1062,7 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
             </li>
             <li><a
                 href="http://scholar.google.com/citations?user=vMMDhTUAAAAJ&amp;hl=en">Christos
+
 
 
 
@@ -1068,6 +1106,7 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
 
 
 
+
                 Karanika</a> (2010), Modelling &amp; Analytics Manager
               at Royal Bank of Scotland</li>
             <li>Robie King (2010)&nbsp;</li>
@@ -1090,6 +1129,7 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
             </li>
             <li><a
 href="https://warwick.ac.uk/fac/sci/mathsys/people/students/2014intake/peneva/">Iliana
+
 
 
 
@@ -1120,8 +1160,10 @@ href="https://warwick.ac.uk/fac/sci/mathsys/people/students/2014intake/peneva/">
 
 
 
+
                 Filipecki</a> (2011, Edinburgh Mathematics), now: <a
                 href="https://de.linkedin.com/in/bartosz-filipecki-24923a85">postdoc
+
 
 
 
@@ -1138,6 +1180,7 @@ href="https://www.bloomberg.com/research/stocks/private/person.asp?personId=2645
 
 
 
+
                 @ Sagamore Investments </a><br>
             </li>
             <li>Bartosz Filipecki (2010, Edinburgh Mathematics)<br>
@@ -1148,6 +1191,7 @@ href="https://www.bloomberg.com/research/stocks/private/person.asp?personId=2645
             <li><a
                 href="http://esd.sutd.edu.sg/faculty/selin-damla-ahipasaoglu/">Selin
 D.
+
 
 
 
@@ -1203,8 +1247,10 @@ D.
 
 
 
+
                 Baes</a> (University of Zurich)</li>
             <li><a href="http://maiage.jouy.inra.fr/?q=fr/bergou">Elhoucine
+
 
 
 
@@ -1259,6 +1305,7 @@ D.
 
 
 
+
                 Eftekhari</a> (The Alan Turing Institute)</li>
             <li><a href="http://www.damtp.cam.ac.uk/people/me404/">Matthias
 
@@ -1287,8 +1334,10 @@ D.
 
 
 
+
                 Ehrhardt</a> (Cambridge)</li>
             <li><a href="http://www.iam.fmph.uniba.sk/ospm/Harman/">Radoslav
+
 
 
 
@@ -1348,8 +1397,10 @@ D.
 
 
 
+
                 Nesterov</a> (Louvain)</li>
             <li><a href="https://www.researchgate.net/profile/Tie_Ni">Tie
+
 
 
 
@@ -1379,6 +1430,7 @@ D.
                 Ni</a> (Liaoning Technical University)</li>
             <li><a
                 href="http://www-syscom.univ-mlv.fr/%7Epesquet/index.htm">Jean-Christophe
+
 
 
 
@@ -1437,9 +1489,11 @@ D.
 
 
 
+
                 Stich</a> (Louvain)</li>
             <li><a
 href="https://www.liverpool.ac.uk/mathematical-sciences/staff/tuomo-valkonen/">Tuomo
+
 
 
 
