DIMACS on YouTube

--- a/index.html
+++ b/index.html
@@ -202,7 +202,9 @@ href="https://www.kaust.edu.sa/en/news/kaust-professor-peter-richt%C3%A1rik-wins
           <br>
           My talk, entitled "Variance Reduction for Gradient
           Compression", is on Monday afternoon. The talk will be
-          recorded and put on YouTube. <br>
+          recorded and put on <a
+            href="https://www.youtube.com/watch?v=n1ELUphtbgg">YouTube.</a>
+          <br>
           <br>
           Abstract: <i>Over the past few years, various randomized
             gradient compression (e.g., quantization, sparsification,
@@ -270,6 +272,13 @@ href="https://papers.nips.cc/paper/7478-sega-variance-reduction-via-gradient-ske
 
 
             are the slides.</a><br>
+          <br>
+          Update (October 4, 2019): <a
+            href="https://www.youtube.com/watch?v=n1ELUphtbgg">My talk
+            is on YouTube now.</a>&nbsp; Here is a <a
+href="https://www.youtube.com/watch?v=dvw-LnqfhLg&amp;list=PLKVCRT3MRed4yWkXj3CLKadDdClCvhQu1">playlist
+            of all the other talks</a> from the event.<br>
+          <br>
           <br>
           <img alt="" src="imgs/fancy-line.png" width="196" height="36">
           <br>
