SGD course on YouTube

--- a/index.html
+++ b/index.html
@@ -238,9 +238,15 @@ href="https://scholar.google.ru/citations?user=XlmSx18AAAAJ&amp;hl=en">Egor
           <br>
           <br>
           <i>Update (Sept 29):</i> My visit of MIPT is over, today I
-          will fly to Nizhny Novgorod. My mini-course was recorded and
-          should appear on YouTube at some point. There might have been
-          an issue with voice recording towards the end though...<br>
+          will fly to Nizhny Novgorod. <a
+            href="https://youtu.be/a05S0kL5u30">My mini-course was
+            recorded and should appear on YouTube at some point.</a>
+          There might have been an issue with voice recording towards
+          the end though... <br>
+          <br>
+          <i>Update (October 8):</i> <a
+            href="https://youtu.be/a05S0kL5u30">The course is up on
+            YouTube now!</a><br>
           <br>
           <br>
           <img alt="" src="imgs/fancy-line.png" width="196" height="36">
@@ -30340,7 +30346,19 @@ be
           <br>
         </div>
         <div id="sidebar">
-          <h6> [8/2019] Sign up for my <a
+          <h6>[10/2019] I have delivered a 5hr mini-course on Stochastic
+            Gradient Descent at Moscow Institute of Physics and
+            Technology (MIPT), entitled <a
+              href="https://youtu.be/a05S0kL5u30">"A Guided Walk Through
+              the ZOO of Stochastic Gradient Descent Methods".</a> The
+            lectures are now on YouTube.<br>
+          </h6>
+          <h6> </h6>
+          <h6><br>
+          </h6>
+          <h6><br>
+          </h6>
+          <h6>[8/2019] Sign up for my <a
               href="https://piazza.com/kaust.edu.sa/fall2019/cs390ff/home">CS
 
 
