--- a/i_team.html
+++ b/i_team.html
@@ -39,6 +39,9 @@
           <h2>Postdocs<br>
           </h2>
           <ul>
+            <li><a href="https://mher-safaryan.github.io">Mher Safaryan</a>
+              (10/2019-present)<br>
+            </li>
             <li><a href="https://zhizeli.github.io">Zhize Li</a>
               (9/2019-present)<br>
             </li>
@@ -76,11 +79,13 @@
 
 
 
+
                 Basyoni</a> (8/2019-present)</li>
             <li><a href="https://slavomirhanzely.wordpress.com">Slavomír
                 Hanzely</a> (8/2019-present)<br>
             </li>
             <li><a href="https://vcc.kaust.edu.sa/Pages/Gasanov.aspx">Elnur
+
 
 
 
@@ -138,16 +143,21 @@
 
 
 
+
                 Sailanbayev</a> (8/2017-12/2018)<br>
             </li>
           </ul>
           <h2> Research Interns<br>
           </h2>
           <ul>
+            <li><a
+                href="https://www.imo-official.org/participant_r.aspx?id=26060">Hoang
+                H. Nguyen</a> (Minerva Schools at KGI), 10/2019-present<br>
+            </li>
             <li><a href="https://rka97.github.io">Ahmed Khaled</a>
-              (Cairo University), 6/2019-present</li>
+              (Cairo University), 6/2019-9/2019</li>
             <li><a href="https://github.com/Selim78">Sélim Chraibi</a>
-              (Grenoble, Rhône-Alpes), 4/2019-present<br>
+              (Grenoble, Rhône-Alpes), 4/2019-9/2019<br>
             </li>
             <li>Ľudovít Horváth (Comenius University), 2/2019-3/2019 <br>
             </li>
@@ -173,10 +183,12 @@
 
 
 
+
                 Sokolov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a
                 href="https://eduardgorbunov.github.io/index.html#header3-a">Eduard
+
 
 
 
@@ -228,10 +240,12 @@
 
 
 
+
                 Elsukov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a
                 href="https://www.researchgate.net/profile/Egor_Shulgin">Egor
+
 
 
 
@@ -279,10 +293,12 @@
 
 
 
+
                 Kovalev</a> (Moscow Institute of Physics and
               Technology), 1/2018-2/2018<br>
             </li>
             <li><a href="https://vcc.kaust.edu.sa/Pages/Gasanov.aspx">Elnur
+
 
 
 
@@ -335,10 +351,12 @@
 
 
 
+
                 Gorbunov</a> (Moscow Institute of Physics and
               Technology), 1/2018-2/2018</li>
             <li><a
                 href="https://www.imo-official.org/participant_r.aspx?id=26648">Slavomír
+
 
 
 
@@ -353,6 +371,7 @@
             <li><a
                 href="https://sands.kaust.edu.sa/authors/atal-narayan-sahu/">Atal
 
+
                 Sahu</a> (IIT Kanpur), 5/2017-7/2017, now: PhD student @
               KAUST<br>
             </li>
@@ -362,6 +381,7 @@
           <ul>
             <li><a
 href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xiuxian
+
 
 
                 Li</a> (Nanyang Technological University), 9/2019<br>
@@ -384,12 +404,14 @@ href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xi
 
 
 
+
                 Kroshnin</a> (Moscow &amp; Lyon), 4/2019<br>
             </li>
             <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
                 Loizou</a> (Edinburgh), 4/2019-5/2019</li>
             <li><a
                 href="https://www.researchgate.net/profile/Dmitry_Kamzolov">Dmitry
+
 
 
 
@@ -427,11 +449,13 @@ href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xi
 
 
 
+
                 Möllenhoff</a> (Munich), 8/2018<br>
             </li>
             <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
                 Loizou</a> (Edinburgh), 1/2018-3/2018</li>
             <li><a href="http://www.damtp.cam.ac.uk/user/me404/">Matthias
+
 
 
 
@@ -497,6 +521,7 @@ href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xi
 
 
 
+
                 Doikov</a> (HSE Moscow), 10/2017-11/2017<br>
             </li>
             <li><a href="http://sstich.ch">Sebastian Stich</a> (EPFL),
@@ -512,6 +537,7 @@ href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xi
                 Hanzely</a> (Edinburgh), 4/2017-5/2017</li>
             <li><a
 href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCHENKO">Dmitriy
+
 
 
 
@@ -591,6 +617,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
 
 
 
+
                 Ribeiro</a> (10/2014<span class="style1" style="width:
                 300px;">–</span>3/2015)</li>
             <li>current position: Associate Professor, Federal
@@ -628,6 +655,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
 
 
 
+
               <br>
             </li>
             <li>current position: Assistant Professor, University of
@@ -635,6 +663,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
           </ul>
           <ul>
             <li><a href="http://perso.telecom-paristech.fr/%7Eofercoq/">Olivier
+
 
 
 
@@ -700,6 +729,7 @@ href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Ra
 
 
 
+
                 Tappenden</a> (2/2012<span class="style1" style="width:
                 300px;">–</span>7/2014)</li>
             <li>current position: Assistant Professor, University of
@@ -709,6 +739,7 @@ href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Ra
           <ul>
             <li><a
 href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marecek">Jakub
+
 
 
 
@@ -782,6 +813,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Loizou</a> (10/2015<span class="style1" style="width:
                 300px;">–</span>6/2019)</li>
             <li>thesis: Randomized iterative methods for linear systems:
@@ -793,6 +825,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
           <ul>
             <li><a
                 href="http://www.inf.ed.ac.uk/people/students/Theo_Pavlakou.html">Theo
+
 
 
 
@@ -869,6 +902,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Csiba</a> (9/2014<span class="style1" style="width:
                 300px;">–present</span>)</li>
             <li>thesis: Data sampling strategies in stochastic
@@ -907,6 +941,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Bravi</a> (3/2015<span class="style1" style="width:
                 300px;">–</span>6/2015)</li>
             <li>visiting PhD student from University of Florence, Italy
@@ -916,6 +951,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
           <ul>
             <li><a
 href="https://scholar.google.com/citations?user=C3ujEF0AAAAJ&amp;hl=zh-CN">Minnan
+
 
 
 
@@ -985,9 +1021,11 @@ href="https://scholar.google.com/citations?user=C3ujEF0AAAAJ&amp;hl=zh-CN">Minna
 
 
 
+
                 Pavlakou</a> (2015) - MSc dissertation</li>
             <li><a
 href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
+
 
 
 
@@ -1026,11 +1064,13 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
 
 
 
+
                 Labant</a> (2016), Data Scientist at Department of
               Education, United Kingdom<br>
             </li>
             <li><a
                 href="https://uk.linkedin.com/in/jakob-kisiala-5807001b">Jakob
+
 
 
 
@@ -1083,9 +1123,11 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
 
 
 
+
                 China</a>&nbsp;</li>
             <li>Meensuk Punlavee (2013)&nbsp;</li>
             <li><a href="https://www.linkedin.com/in/abankswatson">Alexander
+
 
 
 
@@ -1097,6 +1139,7 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
             </li>
             <li><a
                 href="http://scholar.google.com/citations?user=vMMDhTUAAAAJ&amp;hl=en">Christos
+
 
 
 
@@ -1144,6 +1187,7 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
 
 
 
+
                 Karanika</a> (2010), Modelling &amp; Analytics Manager
               at Royal Bank of Scotland</li>
             <li>Robie King (2010)&nbsp;</li>
@@ -1166,6 +1210,7 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
             </li>
             <li><a
 href="https://warwick.ac.uk/fac/sci/mathsys/people/students/2014intake/peneva/">Iliana
+
 
 
 
@@ -1200,8 +1245,10 @@ href="https://warwick.ac.uk/fac/sci/mathsys/people/students/2014intake/peneva/">
 
 
 
+
                 Filipecki</a> (2011, Edinburgh Mathematics), now: <a
                 href="https://de.linkedin.com/in/bartosz-filipecki-24923a85">postdoc
+
 
 
 
@@ -1222,6 +1269,7 @@ href="https://www.bloomberg.com/research/stocks/private/person.asp?personId=2645
 
 
 
+
                 @ Sagamore Investments </a><br>
             </li>
             <li>Bartosz Filipecki (2010, Edinburgh Mathematics)<br>
@@ -1232,6 +1280,7 @@ href="https://www.bloomberg.com/research/stocks/private/person.asp?personId=2645
             <li><a
                 href="http://esd.sutd.edu.sg/faculty/selin-damla-ahipasaoglu/">Selin
 D.
+
 
 
 
@@ -1291,8 +1340,10 @@ D.
 
 
 
+
                 Baes</a> (University of Zurich)</li>
             <li><a href="http://maiage.jouy.inra.fr/?q=fr/bergou">Elhoucine
+
 
 
 
@@ -1351,6 +1402,7 @@ D.
 
 
 
+
                 Eftekhari</a> (The Alan Turing Institute)</li>
             <li><a href="http://www.damtp.cam.ac.uk/people/me404/">Matthias
 
@@ -1381,8 +1433,10 @@ D.
 
 
 
+
                 Ehrhardt</a> (Cambridge)</li>
             <li><a href="http://www.iam.fmph.uniba.sk/ospm/Harman/">Radoslav
+
 
 
 
@@ -1446,8 +1500,10 @@ D.
 
 
 
+
                 Nesterov</a> (Louvain)</li>
             <li><a href="https://www.researchgate.net/profile/Tie_Ni">Tie
+
 
 
 
@@ -1479,6 +1535,7 @@ D.
                 Ni</a> (Liaoning Technical University)</li>
             <li><a
                 href="http://www-syscom.univ-mlv.fr/%7Epesquet/index.htm">Jean-Christophe
+
 
 
 
@@ -1541,9 +1598,11 @@ D.
 
 
 
+
                 Stich</a> (Louvain)</li>
             <li><a
 href="https://www.liverpool.ac.uk/mathematical-sciences/staff/tuomo-valkonen/">Tuomo
+
 
 
 
